<resources>
    <string name="app_name">TheraMe</string>
    <string name="action_settings">Settings</string>


<!--    CHATBOT -->
    <string name="what_s_on_your_mind">Whats on your mind</string>
    <string name="menu_refresh">Refresh</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_acount">Create New Account</string>
    <string name="dont_have">Dont Have an Account</string>
    <string name="sign_in">Sign In</string>
    <string name="reset">Reset</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="action_1">bem</string>
    <string name="action_2">bem2</string>
    <string name="content_description_media">dsdsdsds</string>
    <string name="analytics">Analytics</string>
    <string name="login">Login</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="sign_out">SignOut</string>
    <string name="iexist">Already Have An Account</string>
    <string name="signin">SignIn</string>
    <string name="username">Username</string>
    <string name="signup">SignUp</string>
    <string name="return_login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="finish">Finish</string>
    <string name="section_format">Page %1$d</string>
    <string name="txt1">Everybody deserves a Friend</string>
    <string name="txt2">Prolonged Silence will give you Onion Breath</string>
    <string name="txt3">With Progress Comes Great Rewards</string>
    <string name="lb1">Chat with TheraMe</string>
    <string name="lb12">Speak to TheraMe</string>
    <string name="lb13">Track Your Progress</string>
    <string name="streak">Streak</string>
    <string name="error_password">Password Too Long</string>
    <string name="error_username">Username is Invalid</string>
    <string name="pass_field_empty">Please Enter Password</string>
    <string name="username_field_empty">You Forgot Your Name</string>
    <string name="email_error">Invalid Email</string>
    <string name="pass_error">Password Too Weak</string>
</resources>
