<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="6dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="0dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="#999"
                    android:background="@color/white"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="0dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="#999"
                    android:background="@color/white"
                    android:paddingStart="0dp" />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingEnd="0dp"
                    android:background="@color/white"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="#999"  />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/signup" />

            <TextView
                android:id="@+id/memberReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/iexist"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>